--- a/style.css
+++ b/style.css
@@ -1,30 +1,38 @@
-:root {
-    --bg-color: #000000;
-    --text-color: #ffffff;
-    --font-main: 'Roboto', -apple-system, BlinkMacSystemFont, sans-serif;
-}
-
-body,
-html {
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
     width: 100%;
     height: 100%;
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    font-family: var(--font-main);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 8vw;
+    background-color: #000000;
+    color: #ffffff;
+    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: hidden;
 }
 
-#clock-container {
+body {
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+#clock-container {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-align-items: flex-start;
     align-items: flex-start;
+    margin-right: 8vw;
 }
 
 #time {
@@ -44,9 +52,13 @@ html {
 }
 
 #weather-container {
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-align-items: center;
     align-items: center;
+    -webkit-justify-content: center;
     justify-content: center;
     min-width: 15vw;
 }
@@ -54,7 +66,7 @@ html {
 #weather-icon svg {
     width: 10vw;
     height: 10vw;
-    stroke: var(--text-color);
+    stroke: #ffffff;
     stroke-width: 1.5;
     fill: none;
     margin-bottom: 2px;
